--- a/noteworthy-project/src/App.css
+++ b/noteworthy-project/src/App.css
@@ -1,11 +1,160 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+}
+
 .container {
   width: 100%;
-  height: 100vh;
+  background-color: black;
+}
+
+.main-block, .about-us-block {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  scroll-snap-align: start;
+}
+
+.main-block {
+  background-color: black;
+  justify-content: center;
+}
+
+.about-us-block {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.about-us-heading {
+  font-size: 4rem;
+  color: black;
+  margin-bottom: 20px; 
+}
+
+.about-us-content {
+  width: 100%; 
+  display: flex;
+  justify-content: flex-end; 
+  padding-right: 50px; 
+}
+
+.about-us-text {
+  font-size: 2.1rem;
+  color: black;
+  line-height: 1.6;
+  max-width: 50%; 
+  text-align: left; 
+}
+
+
+
+.noteworthy {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 4rem;
+  color: white;
+  -webkit-text-stroke: 1px black;
+  text-stroke: 1px black;
+  font-weight: 900;
+  margin: 0; 
+}
+
+.subtext {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2rem;
+  font-style: italic;
+  color: white;
+  margin-top: 80px; 
+}
+
+.button-group {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  display: flex;
+  gap: 20px; 
+}
+
+.button {
+  text-decoration: underline;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
+  cursor: pointer; 
+}
+
+.favorites-block {
+  background-color: #f0f0f0; 
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+  text-align: center;
+  padding: 50px 0; 
+  min-height: 100vh; 
+}
+
+.carousel-container {
+  max-width: 40%;
+  margin: auto;
+  transform: scale(2);
+}
+
+.video-slide {
+  position: relative;
+  padding-top: 56.25%; 
+  transition: transform 0.5s ease; 
+}
+
+.video-slide iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.slick-slide {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.noteworthy {
-  font-size: 3rem;
+.carousel-container .slick-slide {
+  transform: scale(0.7);
 }
+
+.carousel-container .slick-center .video-slide {
+  transform: scale(1.7);
+  z-index: 1;
+}
+
+
+.slick-prev, .slick-next {
+  z-index: 2;
+}
+
+.slick-dots {
+  bottom: -30px;
+}
+
+
+
+
+.favorites-heading {
+  font-size: 3rem;
+  color: black;
+  margin-top: 0; 
+  width: 100%; 
+}
+
+
