--- a/noteworthy-project/src/App.css
+++ b/noteworthy-project/src/App.css
@@ -158,3 +158,59 @@ html, body {
 }
 
 
+
+
+
+
+
+/* this is the css for the memembrs*/
+.members-contact-container {
+  font-family: Arial, sans-serif;
+}
+
+.members-section {
+  background-color: #123456; /* Replace with your preferred color */
+  padding: 20px;
+  text-align: center;
+}
+
+.member-cards-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.member-card {
+  background-color: #fff;
+  width: 150px; /* Adjust width as necessary */
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.member-image-placeholder {
+  height: 150px; /* Adjust height as necessary */
+  background-color: #eaeaea; /* Placeholder color */
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.contact-section {
+  background-color: #f2ca6b; /* Replace with your preferred color */
+  padding: 20px;
+  text-align: center;
+}
+
+.contact-card {
+  background-color: #fff;
+  width: 50%; /* Adjust width as necessary */
+  margin: 20px auto;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.social-media-placeholder {
+  /* Style for your social media links or icons */
+  font-size: 1.5em;
+}
