--- a/noteworthy-project/src/App.css
+++ b/noteworthy-project/src/App.css
@@ -27,6 +27,7 @@ html, body {
 }
 
 .about-us-block {
+  position: relative;
   background-color:#add8e6;
   height: 500px;
   display: flex;
@@ -37,11 +38,22 @@ html, body {
   padding-bottom: 10px;
 }
 
+.about-us-block::before {
+  content: "";
+  position: absolute;
+  background-image: url('musicnote.webp');
+  z-index: -1;
+}
+
 .about-us-heading {
   position: relative;
   font-size: 4rem;
   color: black;
   margin-bottom: 20px; 
+}
+
+.about-us p{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .about-us-content {
@@ -50,6 +62,7 @@ html, body {
   justify-content: flex-end; 
   padding-right: 50px; 
 }
+
 
 .about-us-text {
   font-size: 25px;
@@ -129,7 +142,7 @@ html, body {
 .highlight-container-fav {
   position: relative;
   display: inline-block;
-  z-index: 1; /* Ensure the text is above the highlight */
+  z-index: 1;
 }
 
 .highlight-container-fav:before {
@@ -140,9 +153,9 @@ html, body {
   position: absolute;
   background: #ffd500;
   transform: rotate(2deg);
-  top: 25px; /* Adjust this value as needed to avoid overlap */
+  top: 25px;
   left: 0;
-  z-index: -1; /* Position the highlight behind the text */
+  z-index: -1;
   border-radius: 20% 25% 20% 24%;
   padding: 10px 3px 3px 10px;
 }
@@ -202,6 +215,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .members-section {
@@ -212,19 +226,55 @@ html, body {
 }
 
 .members-section h1 {
-  color: white;
+  position: relative;
+  font-size: 4rem;
+  color: black;
+  margin-bottom: 20px; 
   text-align: center;
   width: 100%;
   margin-top: 0;
   padding-top: 20px;
 }
 
+.members-section h2 {
+  font-family: Copperplate, Papyrus;
+  text-shadow: -2px 2px #ffd500;
+  text-transform: uppercase;
+}
+
+.members-section p{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.members-section img {
+  border: 2px solid #ffd500;
+  padding: 7px;
+  border-radius: 5%;
+}
 .members-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 15px;
   justify-content: center;
   padding: 20px;
+}
+
+.highlight-container-members {
+  position: relative;
+  display: inline-block;
+}
+
+.highlight-container-members:before {
+  content: " ";
+  display: block;
+  height: 30%;
+  width: 100%;
+  position: absolute;
+  background: #ffd500;
+  transform: rotate(2deg);
+  top: 30px;
+  border-radius: 20% 25% 20% 24%;
+  padding: 10px 3px 3px 10px;
 }
 
 @media (max-width: 768px) {
@@ -275,12 +325,12 @@ html, body {
   align-items: center; 
   justify-content: start; 
   padding: 20px;
-  width: 60vw; 
+  width: 80vw; 
   height: 60vh; 
   max-width: 800px; 
   max-height: 600px; 
   background-color: white;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1001;
   overflow: hidden; 
@@ -290,14 +340,16 @@ html, body {
 .modal-member-image {
   width: 30%; 
   height: auto; 
+  margin-left: 20px;
   margin-right: 20px; 
 }
 
 .modal-text-content {
-  width: 70%; 
+  width: 60%; 
   height: 100%; 
   overflow-y: auto; 
-  padding-right: 10px; 
+  padding-right: 20px; 
+  padding-left: 10px;
   box-sizing: border-box; 
 }
 
